[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "bdexports"
version = "0.1.0"
description = "Bangladesh export data toolkit for downloading, cleaning, and visualising EPB Excel releases."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Abdul Aziz Pervez" }
]
dependencies = [
  "pandas>=2.1",
  "tqdm>=4.66",
  "requests>=2.31",
  "playwright>=1.48",
  "matplotlib>=3.8",
  "bar-chart-race>=0.1.0",
  "openpyxl>=3.1",
]

[tool.setuptools.packages.find]
where = ["src"]
